# ApHIN

./: .gitignore  CONTRIBUTORS  Dockerfile  LICENSE  README.md  docker-compose.yml  paper_requirements.txt  pyproject.toml
Institute-Eng-and-Comp-Mechanics-UStgt/ApHIN/: README.md
aphin/identification/: aphin.py  conv_aphin.py  ph_basemodel.py  phin.py
aphin/layers/: __init__.py  descriptor_ph_layer.py  lti_layer.py  ph_layer.py  phq_layer.py  system_layer.py
aphin/operators/: __init__.py  linear_operator_skew_sym.py  linear_operator_sym.py  linear_operator_sym_pos_def.py  operator_utils.py
aphin/systems/: __init__.py  lti_systems.py  ph_systems.py
aphin/utils/: callbacks_tensorflow.py  configuration.py  experiments.py  integrators.py  print_matrices.py  save_results.py  transformations.py  visualizations.py
docs/: .buildinfo  aphin.html  aphin.identification.html  aphin.layers.html  aphin.operators.html  aphin.systems.html  aphin.utils.data.html  aphin.utils.html  contact.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/source/: aphin.identification.rst  aphin.layers.rst  aphin.operators.rst  aphin.rst  aphin.systems.rst  aphin.utils.data.rst  aphin.utils.rst  conf.py  contact.rst  index.rst  modules.rst
examples/: linear_ode_example.py  main.py  model_from_video.py  paper_figures.py
examples/SynRM/: config.yml  synrm.py
examples/disc_brake/: config.yml  config_paper.yml  disc_brake_param_dep_example.py  disc_brake_param_dep_example_tmp.py  error_for_each_state_x  error_for_each_state_x_dt_rec  error_for_each_state_x_rec  read_disc_brake_abaqus_data.py
examples/disc_brake_2/: config.yml  disc_brake.py
examples/disc_brake_with_hole/: config.yml  disc_brake_with_hole.py  disc_brake_with_holes_figures.py  (+2 more)
(+703 files in other folders)
