[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aphin"
version = "1.1"
authors = [
  { name="Jonas Kneifl", email="jonas.kneifl@itm.uni-stuttgart.com" },
  { name="Johannes Rettberg", email="johannes.rettberg@itm.uni-stuttgart.com" },
  { name="Julius Herb", email="julius.herb@mib.uni-stuttgart.com" },
]
description = "Autoencoder-based port-Hamiltonian Identification Networks (ApHIN) is a Python package for structure-preserving model order reduction and system identification of port-Hamiltonian systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.9",
    "numpy>=1.21.4",
    "scikit_learn>=1.2",
    "scikit_optimize>=0.10",
    "scipy>=1.10",
    "tensorflow>=2.15",
    "tensorflow_probability>=0.24",
    "tensorflow_model_optimization>=0.7",
    "tf-keras>=2.16",
    "PyYAML>=6",
    "pandas>=1.3.4",
    "natsort>=8.4.0",
    "tqdm>=4.66.2",
    "pymor>=2023.2.0",
    "visualizer-3d>=0.3",
]
keywords = [
    "structure-preserving model order reduction",
    "system identification",
    "surrogate modeling",
    "reduced order models",
    "port-Hamiltonian systems"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gui = [
]
interfaces = [
]

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}

[project.urls]
Homepage = "https://github.com/Institute-Eng-and-Comp-Mechanics-UStgt/ApHIN"
Issues = "https://github.com/Institute-Eng-and-Comp-Mechanics-UStgt/ApHIN/issues"
